# rusty_crab

./: Cargo.toml
tasks/common_serde/: Cargo.toml
tasks/common_serde/examples/: example_usage.rs
tasks/common_serde/src/: lib.rs
tasks/common_serde_derive/: Cargo.toml
tasks/common_serde_derive/src/: lib.rs
tasks/common_todo_cli/: Cargo.toml  common_todo_db.json  docker-compose.yml  localhost_run.sh
tasks/common_todo_cli/config/: development.toml
tasks/common_todo_cli/src/: gui.rs  lib.rs  main.rs
tasks/common_todo_cli/src/cli/: commands.rs  mod.rs
tasks/common_todo_cli/src/config/: app_config.rs
tasks/common_todo_cli/src/db/: config.rs  errors.rs  json_storage.rs  mod.rs  postgresql_storage.rs  storage.rs
tasks/common_todo_cli/src/db/json/: config.rs  json_storage.rs  mod.rs
tasks/common_todo_cli/src/db/json_storage/: config.rs  json_storage.rs  mod.rs
tasks/common_todo_cli/src/db/mongodb/: config.rs  mod.rs  mongodb_storage.rs
tasks/common_todo_cli/src/db/postgres/: config.rs  mod.rs  postgres_storage.rs
tasks/common_todo_cli/src/model/: task.rs
tasks/easy-tasks/: Cargo.toml
tasks/easy-tasks/resources/: test_file.csv
tasks/easy-tasks/src/: array_searching.rs  array_sorting.rs  common_csv_parser.rs  common_hash_map.rs  common_serde.rs  common_vec.rs  main.rs
tasks/leetcode/src/: best_time_to_buy_and_sell_stock.rs  coin_change.rs  contains_duplicate.rs  kth_largest_element_in_a_stream.rs  main.rs  search_2d_matrix.rs  valid_palindrome.rs  valid_parentheses.rs
